# delphi_fertility_eval

./: .gitignore  README.md  pyproject.toml
configs/: fertility_default.yaml
ferteval/: __init__.py  build_meta.py  calibration.py  cli.py  config.py  decomposition.py  demography.py  extraction.py  inference.py  loaders.py  metrics_auc.py  pipelines.py  plotting.py  sampling.py  vocab.py
